Use generics in o.e.compare.examples.xml